--- a/libgrac-device/Makefile.am
+++ b/libgrac-device/Makefile.am
@@ -6,27 +6,21 @@ AM_CPPFLAGS = 					\
 lib_LTLIBRARIES = 	\
 	libgrac-device.la
 
-libgrac_device_headers =		\
-	grac_map.h		\
-	grac_apply.h			\
-	grac_apply_network.h	\
-	grac_apply_printer.h		\
-	grac_apply_usb.h		\
-	grac_apply_capture.h 	\
-	grac_apply_dir.h		\
-	grac_access.h		\
-	grac_access_attr.h	
+libgrac_device_headers =	\
+	grac_map.h			\
+	grac_rule.h			\
+	grac_rule_network.h	\
+	grac_rule_udev.h		\
+	grac_rule_hook.h		\
+	grac_resource.h
 
-libgrac_device_sources =		\
-	grac_map.c		\
-	grac_apply.c			\
-	grac_apply_network.c	\
-	grac_apply_printer.c		\
-	grac_apply_usb.c		\
-	grac_apply_capture.c 	\
-	grac_apply_dir.c		\
-	grac_access.c		\
-	grac_access_attr.c	
+libgrac_device_sources =	\
+	grac_map.c			\
+	grac_rule.c			\
+	grac_rule_network.c	\
+	grac_rule_udev.c		\
+	grac_rule_hook.c		\
+	grac_resource.c
 
 libgrac_device_includedir = \
 	$(includedir)/libgrac-device
