--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,12 @@
 dbusconfdir   = $(sysconfdir)/dbus-1/system.d
 dbusconf_DATA = kr.gooroom.GRACDEVD.conf
 
+gracdefaultdir   = /etc/gooroom/grac.d
+gracdefault_DATA = default.rules
+
+gracmapdir   = /etc/gooroom/grac.d
+gracmap_DATA = grac-udev-rules.map
+
 servicedir       = $(datadir)/dbus-1/system-services
 service_in_files = kr.gooroom.GRACDEVD.service.in
 service_DATA     = $(service_in_files:.service.in=.service)
@@ -16,6 +22,8 @@ grac-device-daemon.service: grac-device-daemon.service.in
 
 EXTRA_DIST = 			\
 	$(dbusconf_DATA)	\
+	$(gracdefault_DATA)	\
+	$(gracmap_DATA)	\
 	$(service_in_files)	\
 	grac-device-daemon.service.in 
 
