--- a/workspace/libgrac-device/.project
+++ b/workspace/libgrac-device/.project
@@ -30,84 +30,24 @@
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/src</locationURI>
 		</link>
 		<link>
-			<name>src/grac_access.c</name>
+			<name>src/grac_rule_udev.c</name>
 			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_access.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_udev.c</locationURI>
 		</link>
 		<link>
-			<name>src/grac_access.h</name>
+			<name>src/grac_rule_udev.h</name>
 			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_access.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_udev.h</locationURI>
 		</link>
 		<link>
-			<name>src/grac_access_attr.c</name>
+			<name>src/grac_rule_hook.c</name>
 			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_access_attr.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_hook.c</locationURI>
 		</link>
 		<link>
-			<name>src/grac_access_attr.h</name>
+			<name>src/grac_rule_hook.h</name>
 			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_access_attr.h</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply.h</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_capture.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_capture.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_capture.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_capture.h</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_dir.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_dir.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_dir.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_dir.h</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_network.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_network.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_network.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_network.h</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_printer.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_printer.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_printer.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_printer.h</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_usb.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_usb.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_apply_usb.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_apply_usb.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_hook.h</locationURI>
 		</link>
 		<link>
 			<name>src/grac_map.c</name>
@@ -118,6 +58,36 @@
 			<name>src/grac_map.h</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_map.h</locationURI>
+		</link>
+		<link>
+			<name>src/grac_resource.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_resource.c</locationURI>
+		</link>
+		<link>
+			<name>src/grac_resource.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_resource.h</locationURI>
+		</link>
+		<link>
+			<name>src/grac_rule.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule.c</locationURI>
+		</link>
+		<link>
+			<name>src/grac_rule.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule.h</locationURI>
+		</link>
+		<link>
+			<name>src/grac_rule_network.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_network.c</locationURI>
+		</link>
+		<link>
+			<name>src/grac_rule_network.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_network.h</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
