--- a/workspace/test/.cproject
+++ b/workspace/test/.cproject
@@ -33,6 +33,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/../libgrac-browser/&quot;"/>
 									<listOptionValue builtIn="false" value="/usr/include/glib-2.0/"/>
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/glib-2.0/include/"/>
+									<listOptionValue builtIn="false" value="/usr/include/gdk-pixbuf-2.0/"/>
 								</option>
 								<option id="gnu.c.compiler.option.dialect.std.701254869" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" value="gnu.c.compiler.dialect.default" valueType="enumerated"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.555863678" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
@@ -47,6 +48,8 @@
 									<listOptionValue builtIn="false" value="acl"/>
 									<listOptionValue builtIn="false" value="cups"/>
 									<listOptionValue builtIn="false" value="gio-2.0"/>
+									<listOptionValue builtIn="false" value="gdk_pixbuf-2.0"/>
+									<listOptionValue builtIn="false" value="notify"/>
 								</option>
 								<option id="gnu.c.link.option.paths.925625839" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libgrac-common/Debug}&quot;"/>
