--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: gooroom <gooroom@gooroom.kr>
 Build-Depends: debhelper (>= 9), autoconf, automake, liboobs-1-dev, libglib2.0-dev,
   xfce4-dev-tools, intltool, libtool, libgtk-3-dev, libpolkit-gobject-1-dev, libxml2-dev,
-  libacl1-dev, libcups2-dev, libselinux1-dev, libjson-c-dev, libcurl4-openssl-dev
+  libacl1-dev, libcups2-dev, libselinux1-dev, libjson-c-dev, libcurl4-openssl-dev,
+  libgtk2.0-dev, libuim-dev
 Standards-Version: 3.9.5
 
 Package: grac-device-daemon
