--- a/configure.ac.in
+++ b/configure.ac.in
@@ -4,10 +4,12 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-m4_define([grac_verinfo], [0:0:0])
-m4_define([grac_version_api_major], [1])
+m4_define([grac_verinfo], [0:1:0])
+m4_define([grac_version_api_major], [0])
+m4_define([grac_version_api_minor], [1])
+m4_define([grac_version_api_micro], [0])
 m4_define([grac_version_major], [0])
-m4_define([grac_version_minor], [0])
+m4_define([grac_version_minor], [1])
 m4_define([grac_version_micro], [0])
 m4_define([grac_version_build], [r@REVISION@])
 m4_define([grac_version_tag], [git])
