Modified the dependency of grac-device-daemon.
Change-Id: I348bd2ba996e88ee26ded4378cfcc6187311e653

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Depends: libgrac-device,
 		libgrac-common,
 		hook-clipboard,
 		hook-screenshooter,
+		gooroom-security-utils,
 		${misc:Depends}
 Description: grac device daemon 
  This is a daemon to control the access to each devices on Gooroom OS. For example, network, USB, Bluetooth device.
