--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: gooroom <gooroom@gooroom.kr>
 Build-Depends: debhelper (>= 9), autoconf, automake, liboobs-1-dev, libglib2.0-dev,
   xfce4-dev-tools, intltool, libtool, libgtk-3-dev, libpolkit-gobject-1-dev, libxml2-dev,
   libacl1-dev, libcups2-dev, libselinux1-dev, libjson-c-dev, libcurl4-openssl-dev,
-  libgtk2.0-dev, libuim-dev
+  libgtk2.0-dev, libuim-dev, gooroom-security-utils
 Standards-Version: 3.9.5
 
 Package: grac-device-daemon
@@ -14,7 +14,6 @@ Depends: libgrac-device,
 		libgrac-common,
 		hook-clipboard,
 		hook-screenshooter,
-		gooroom-security-utils,
 		${misc:Depends}
 Description: grac device daemon 
  This is a daemon to control the access to each devices on Gooroom OS. For example, network, USB, Bluetooth device.
