Modified the message handling in a hooking module, Added checking primary block devices, inserting mac address to udev rules for the bluetooth
Change-Id: I6b2e0701d3f80bfeec755bfe9847b10b423c4d0c

--- a/libgrac-common/Makefile.am
+++ b/libgrac-common/Makefile.am
@@ -18,7 +18,8 @@ libgrac_common_headers =		\
 	sys_etc.h	\
 	cutility.h		\
 	grm_log.h	\
-	grac_config.h
+	grac_config.h	\
+	grac_map.h
 
 libgrac_common_sources =		\
 	cutility.c		\
@@ -33,7 +34,8 @@ libgrac_common_sources =		\
 	sys_file.c	\
 	sys_etc.c	\
 	grm_log.c	\
-	grac_config.c
+	grac_config.c	\
+	grac_map.c
 
 libgrac_common_includedir = $(includedir)/libgrac-common
 
