--- a/libgrac-device/Makefile.am
+++ b/libgrac-device/Makefile.am
@@ -7,20 +7,20 @@ lib_LTLIBRARIES = 	\
 	libgrac-device.la
 
 libgrac_device_headers =	\
-	grac_map.h			\
 	grac_rule.h			\
 	grac_rule_network.h	\
 	grac_rule_udev.h		\
 	grac_rule_hook.h		\
-	grac_resource.h
+	grac_resource.h		\
+	grac_adjust_udev_rule.h
 
 libgrac_device_sources =	\
-	grac_map.c			\
 	grac_rule.c			\
 	grac_rule_network.c	\
 	grac_rule_udev.c		\
 	grac_rule_hook.c		\
-	grac_resource.c
+	grac_resource.c		\
+	grac_adjust_udev_rule.c
 
 libgrac_device_includedir = \
 	$(includedir)/libgrac-device
