--- a/workspace/libgrac-device/.project
+++ b/workspace/libgrac-device/.project
@@ -50,16 +50,6 @@
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_hook.h</locationURI>
 		</link>
 		<link>
-			<name>src/grac_map.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_map.c</locationURI>
-		</link>
-		<link>
-			<name>src/grac_map.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_map.h</locationURI>
-		</link>
-		<link>
 			<name>src/grac_resource.c</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_resource.c</locationURI>
@@ -88,6 +78,16 @@
 			<name>src/grac_rule_network.h</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule_network.h</locationURI>
+		</link>
+		<link>
+			<name>src/grac_adjust_udev_rule.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_adjust_udev_rule.c</locationURI>
+		</link>
+		<link>
+			<name>src/grac_adjust_udev_rule.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_adjust_udev_rule.h</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
