Added the CUPS handling
Change-Id: I0059e596211e676e4414c550df1bdd6db93db50d

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,8 @@ workspace/test/Debug/
 workspace/test/Release/
 workspace/test-c/Debug/
 workspace/test-c/Release/
+workspace/**/Debug/
+workspace/**/Release/
 workspace/**/html/
 workspace/**/latex/
 workspace/**/*.o
