Modified the package dependency (debian/control)
Change-Id: I821843e0fa556f034a67c33ebc54714a36e97e9e

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,9 @@ Depends: libgrac-device,
 		libgrac-common,
 		hook-clipboard,
 		hook-screenshooter,
+		libnotify-bin, bluez, udev, eject, iptables, ipset, 
+		avahi-utils,
+		util-linux, bsdutils, coreutils, gawk, procps,
 		${misc:Depends}
 Description: grac device daemon 
  This is a daemon to control the access to each devices on Gooroom OS. For example, network, USB, Bluetooth device.
