Added the printer monitoring and Updated the method to call a linux command
Change-Id: I3d3fd509de0fe37607e24fc76b174b4627ae9297

--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Depends: libgrac-device,
 		hook-clipboard,
 		hook-screenshooter,
 		libnotify-bin, bluez, udev, eject, iptables, ipset, 
-		avahi-utils,
+		avahi-utils,cups-client,
 		util-linux, bsdutils, coreutils, gawk, procps,
 		${misc:Depends}
 Description: grac device daemon 
