--- a/libgrac-device/Makefile.am
+++ b/libgrac-device/Makefile.am
@@ -13,6 +13,7 @@ libgrac_device_headers =	\
 	grac_rule_hook.h		\
 	grac_rule_printer_cups.h	\
 	grac_resource.h		\
+	grac_printer.h		\
 	grac_adjust_udev_rule.h
 
 libgrac_device_sources =	\
@@ -22,6 +23,7 @@ libgrac_device_sources =	\
 	grac_rule_hook.c		\
 	grac_rule_printer_cups.c	\
 	grac_resource.c		\
+	grac_printer.c		\
 	grac_adjust_udev_rule.c
 
 libgrac_device_includedir = \
