--- a/workspace/libgrac-device/.project
+++ b/workspace/libgrac-device/.project
@@ -70,6 +70,16 @@
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_resource.h</locationURI>
 		</link>
 		<link>
+			<name>src/grac_printer.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_printer.c</locationURI>
+		</link>
+		<link>
+			<name>src/grac_printer.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_printer.h</locationURI>
+		</link>
+		<link>
 			<name>src/grac_rule.c</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/libgrac-device/grac_rule.c</locationURI>
