--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: gooroom <gooroom@gooroom.kr>
 Build-Depends: debhelper (>= 9), autoconf, automake, liboobs-1-dev, libglib2.0-dev,
   xfce4-dev-tools, intltool, libtool, libgtk-3-dev, libpolkit-gobject-1-dev, libxml2-dev,
   libacl1-dev, libcups2-dev, libselinux1-dev, libjson-c-dev, libcurl4-openssl-dev,
-  libgtk2.0-dev, libuim-dev, gooroom-security-utils
+  libgtk2.0-dev, libuim-dev, gooroom-security-utils, libudev-dev
 Standards-Version: 3.9.5
 
 Package: grac-device-daemon
@@ -14,8 +14,9 @@ Depends: libgrac-device,
 		libgrac-common,
 		hook-clipboard,
 		hook-screenshooter,
+		libudev1,
 		libnotify-bin, bluez, udev, eject, iptables, ipset, 
-		avahi-utils,cups-client,
+		avahi-utils,cups-client,udisks2,
 		util-linux, bsdutils, coreutils, gawk, procps,
 		${misc:Depends}
 Description: grac device daemon 
