Renamed the grm_log to grac_log, Modified grac-daemon serivce file to log a grac-daemon status
Change-Id: I74a66bfc92b825e7b1efd070dba054720d59de8a

--- a/data/grac-device-daemon.service.in
+++ b/data/grac-device-daemon.service.in
@@ -7,6 +7,8 @@ Type=dbus
 BusName=kr.gooroom.GRACDEVD
 ExecStart=@libexecdir@/grac-device-daemon
 ExecReload=/bin/kill -HUP $MAINPID
+ExecStartPost=/usr/bin/grac-status.sh started $MAINPID 
+ExecStopPost=/usr/bin/grac-status.sh stopped $SERVICE_RESULT $EXIT_CODE $EXIT_STATUS
 
 [Install]
 #Also=
