--- a/usr/share/applications/grac-editor.desktop
+++ b/usr/share/applications/grac-editor.desktop
@@ -112,7 +112,7 @@ Exec=/usr/bin/grac-editor
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=
+Icon=grac-editor
 Categories=
 MimeType=text/html;text/xml;application/xhtml_xml;application/x-mimearchive;x-scheme-handler/http;x-scheme-handler/https;
 StartupWMClass=grac-editor
