moved grac-editor category to System
Change-Id: Ieb3709680ae3e027953786b52bce7be5e03b9956

--- a/usr/share/applications/grac-editor.desktop
+++ b/usr/share/applications/grac-editor.desktop
@@ -9,6 +9,6 @@ Terminal=false
 X-MultipleArgs=false
 Type=Application
 Icon=grac-editor
-Categories=
+Categories=System
 StartupWMClass=grac-editor
 StartupNotify=true
