change 매체제어 편집기 to 매체제어 편집 in desktop file and network's default state(accept) in default rules
Change-Id: I7abd679305dc4d12ba68bcbdcc5284025992c2ce

--- a/usr/share/applications/grac-editor.desktop
+++ b/usr/share/applications/grac-editor.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
 Name=Grac Editor
-Name[ko]=매체제어 편집기
+Name[ko]=매체제어 편집
 GenericName=Grac Editor
-GenericName[ko]=매체제어 편집기
+GenericName[ko]=매체제어 편집
 Exec=/usr/bin/grac-editor
 Terminal=false
 X-MultipleArgs=false
