Added Comment on desktop
Change-Id: I384b716b88db9e1599a102991a8c6d5b06de7a40

--- a/usr/share/applications/grac-editor.desktop
+++ b/usr/share/applications/grac-editor.desktop
@@ -5,6 +5,8 @@ Name[ko]=매체제어 편집
 GenericName=Grac Editor
 GenericName[ko]=매체제어 편집
 Exec=/usr/bin/grac-editor
+Comment=Manage device access to your computer
+Comment[ko]=컴퓨터에 대한 장치 액세스를 관리합니다
 Terminal=false
 X-MultipleArgs=false
 Type=Application
